เพิ่ม cron โหลดทุกๆ 1 วินาที

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^3.3.2",
     "mongojs": "^3.1.0",
     "mongoose": "^5.7.3",
+    "node-cron": "^2.0.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
